resources/css/index.css
/* fira-code class
<uniquifier>: Use a unique and descriptive class name
<weight>: Use a value from 300 to 700 */

*, *::before, *::after {
    box-sizing: border-box;
}

/* fonts */

.fira-code-300 {
    font-family: "Fira Code", serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
}

.roboto-100 {
    font-family: "Roboto", serif;
    font-optical-sizing: auto;
    font-weight: 100;
    font-style: normal;
}

/* elements */

html {
    height: 100%;
}

body {
    height: 100%;
    background-color: rgb(0, 0, 0);
    color: white;
    text-align: center;
    font-family: 'Fira Code', Arial, sans-serif;
}
    
h1 {
border-radius: 20px;
font-family: 'Fira Code';
font-weight: 300;
margin: 3%;
}

h2 {
    font-family: 'Fira Code';
    font-weight: 300;
}
  
p, 
li {
    font-size: 18px;
}
    
a {
    display: inline-block; /* Allows the anchor tag to respect width and height */
    text-decoration: none; /* Removes the underline */
    width: 100%;
    height: auto;
}

/* class specific styles */

/* home page */

.home-content {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 550px;
}

.banner {
    display: flex;
    
    font-family: 'Fira Code';
    font-style: normal;
    font-weight: 400;
    font-size: 28px;
    line-height: 120%;

    color: #FFFFFF;

    border: 1px solid #000000;
}

/* buttons */

/* home navbar */

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.navbar-button {
    height: auto;
    width: 25%;
}

.socials-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.socials-button {
    height: auto;
    width: 6%;
    margin: 0 2%;
}

/* terminal text */

.terminal-text-box {
    margin: 2% 6%;
    display: flex;
    flex-direction: column;
    justify-content: left;
    align-items: left;
    color: #FFFFFF;
}

.terminal-text {
    text-align: left;
    font-family: 'Fira Code';
    font-style: normal;
    font-weight: 400;
    font-size: 28px;
    line-height: 250%;
    color: #FFFFFF;
}

/* about page */

.main-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
    width: 100%;
    padding: 3% 0;
}

.main-text-box {
    display: flex;
    margin: 2% 0;
    width: 60%;
}

.main-text {
    width: 100%;
    font-family: 'Fira Code';
    line-height: 1.8;
}

/* main buttons */

.headernavbar {
    display: flex;
    justify-content: space-evenly;
    margin: 2% 0;
    width: 100%;
}

.header-nav-button {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 20%;
    height: auto;
    margin: 1% 0%;
}

.header-nav-button-icon {
    width: 10%;
    height: auto;
}

.icon-link {
    display: flex;
    width: 100%;
    justify-content: center;
    color: #95F450;
}

.icon-text {
    font-size: 30px;
    margin: 0% 30%;
    font-family: 'Fira Code';
    font-weight: lighter;
}

/* main images */

.main-image-container {
    width: 50%;
}

.main-image {
    box-sizing: border-box;
    height: auto;
    max-width: 100%;
    border: 1px solid #FFFFFF;
    border-radius: 20px;
}

/* images */

.project-pic {
box-sizing: border-box;

position: absolute;
width: 917px;
height: 284px;
left: calc(50% - 917px/2 + 0.5px);
top: calc(50% - 284px/2 + 80px);

border: 1px solid #FFFFFF;
border-radius: 20px;
}

/* projects */

.projects-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;
    padding: 1% 0 6% 0;
}

.video-container {
    width: 60%;
    height: auto;
    border-radius: 20px;
}

.website-design {
    width: 100%;
    height: auto;
    border-radius: 20px;
}

.section-divider {
    width: 60%;
    border: none;
    border-top: 1px solid rgba(255, 255, 255, 0.15);
    margin: 0.5rem 0;
}

/* pdf embed */

.pdf-container {
    width: 60%;
    height: auto;
}

.pdf-embed {
    width: 100%;
    height: 750px;
    border: 1px solid #FFFFFF;
    border-radius: 20px;
    background: #000;
}

/* copyright */

/* footer */


.copyright-footer {
    position: fixed;
    width: 181px;
    height: 150px;
    right: 0px;
    bottom: 0px;
}

.copyright-text {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 52px;
    color: #FFFFFF;
}
/* ... */

